--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,3 @@
-#            curl "https://awscli.amazonaws.com/awscli-exe-linux-aarch64.zip" -o "awscliv2.zip"
-
 version: 2.1
 executors:
   base-image:
@@ -12,6 +10,9 @@ executors:
 jobs:
   build-and-push-to-ecr:
     executor: base-image
+    environment:
+      #linux/amd64,linux/386,linux/arm/v5,linux/arm/v6,linux/arm/v7,linux/arm64,linux/mips64le,linux/ppc64le,linux/riscv64,linux/s390x
+      BUILDX_PLATFORMS: linux/amd64,linux/arm64
     steps:
       - checkout
       - run:
@@ -33,13 +34,43 @@ jobs:
             sudo aws ecr get-login-password | docker login --username AWS --password-stdin 933870538447.dkr.ecr.eu-central-1.amazonaws.com/pets
             sudo aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/x0n9a3d4/base-images
       - run:
-          name: Build alpine-basic
-#          TODO: Build for arm64
+          name: Install docker buildx plugin
           command: |
-            docker build --build-arg ARCH=amd64 ~/project/alpine-basic/ --tag alpine-basic-amd64
-            docker tag alpine-basic-amd64 public.ecr.aws/x0n9a3d4/alpine-basic:$CIRCLE_BUILD_NUM
-            docker tag alpine-basic-amd64 public.ecr.aws/x0n9a3d4/alpine-basic:latest
-            docker push public.ecr.aws/x0n9a3d4/alpine-basic --all-tags
+            curl -LJO https://github.com/docker/buildx/releases/download/v0.5.1/buildx-v0.5.1.linux-amd64
+            mkdir -p ~/.docker/cli-plugins
+            mv buildx-v0.5.1.linux-amd64 ~/.docker/cli-plugins/docker-buildx
+            chmod a+x ~/.docker/cli-plugins/docker-buildx
+            docker buildx install
+      - run:
+          name: Create build multi platform builder
+          command: |
+            docker buildx create --name mybuilder --platform $BUILDX_PLATFORMS --driver docker-container --use
+            docker buildx use mybuilder
+            docker buildx inspect --bootstrap
+      - run:
+          name: Build alpine-basic
+          command: |
+            docker buildx build \
+            --platform $BUILDX_PLATFORMS \
+            -t public.ecr.aws/x0n9a3d4/alpine-basic:$CIRCLE_BUILD_NUM \
+            -t public.ecr.aws/x0n9a3d4/alpine-basic:latest \
+            ~/project/alpine-basic/ --push
+      - run:
+          name: Build alpine-jre8
+          command: |
+            docker buildx build \
+            --platform $BUILDX_PLATFORMS --no-cache \
+            -t public.ecr.aws/x0n9a3d4/alpine-jre8:$CIRCLE_BUILD_NUM \
+            -t public.ecr.aws/x0n9a3d4/alpine-jre8:latest \
+            ~/project/alpine-jre8/ --push
+      - run:
+          name: Build alpine-jre11
+          command: |
+            docker buildx build \
+            --platform $BUILDX_PLATFORMS --no-cache \
+            -t public.ecr.aws/x0n9a3d4/alpine-jre11:$CIRCLE_BUILD_NUM \
+            -t public.ecr.aws/x0n9a3d4/alpine-jre11:latest \
+            ~/project/alpine-jre8/ --push
 
 workflows:
   version: 2
