--- a/alpine-nginx/Dockerfile
+++ b/alpine-nginx/Dockerfile
@@ -1,5 +1,5 @@
 FROM public.ecr.aws/x0n9a3d4/alpine-basic:latest
-RUN apk add 'openssl=1.1.1k-r0' curl ca-certificates --no-cache
+RUN apk add openssl curl ca-certificates --no-cache
 RUN printf "%s%s%s\n" "http://nginx.org/packages/alpine/v" `egrep -o '^[0-9]+\.[0-9]+' /etc/alpine-release` "/main" | tee -a /etc/apk/repositories
 RUN curl -o /tmp/nginx_signing.rsa.pub https://nginx.org/keys/nginx_signing.rsa.pub
 RUN mv /tmp/nginx_signing.rsa.pub /etc/apk/keys/
