--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,7 +44,7 @@ jobs:
       - run:
           name: Create build multi platform builder
           command: |
-            docker buildx create --name mybuilder --platform $BUILDX_PLATFORMS --driver docker --use
+            docker buildx create --name mybuilder --platform $BUILDX_PLATFORMS --driver docker-container --use
             docker buildx use mybuilder
             docker buildx inspect --bootstrap
       - run:
@@ -74,11 +74,12 @@ jobs:
       - run:
           name: Build alpine-nginx
           command: |
-            docker buildx build \
-            --platform $BUILDX_PLATFORMS --no-cache \
-            -t public.ecr.aws/x0n9a3d4/alpine-nginx:$CIRCLE_BUILD_NUM \
-            -t public.ecr.aws/x0n9a3d4/alpine-nginx:latest \
-            ~/project/alpine-nginx/ --push
+            #            todo: maker multi platform image whern buildx fixed
+                     docker build \
+                     --no-cache \
+                     -t public.ecr.aws/x0n9a3d4/alpine-nginx:$CIRCLE_BUILD_NUM \
+                     -t public.ecr.aws/x0n9a3d4/alpine-nginx:latest \
+                     ~/project/alpine-nginx/ --push
 
 workflows:
   version: 2
