--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,12 +74,11 @@ jobs:
       - run:
           name: Build alpine-nginx
           command: |
-            #            todo: maker multi platform image whern buildx fixed
-                     docker build \
-                     --no-cache \
-                     -t public.ecr.aws/x0n9a3d4/alpine-nginx:$CIRCLE_BUILD_NUM \
-                     -t public.ecr.aws/x0n9a3d4/alpine-nginx:latest \
-                     ~/project/alpine-nginx/ --push
+            docker buildx build \
+            --platform $BUILDX_PLATFORMS --no-cache \
+            -t public.ecr.aws/x0n9a3d4/alpine-nginx:$CIRCLE_BUILD_NUM \
+            -t public.ecr.aws/x0n9a3d4/alpine-nginx:latest \
+            ~/project/alpine-nginx/ --push
 
 workflows:
   version: 2
