--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
     executor: base-image
     environment:
       #linux/amd64,linux/386,linux/arm/v5,linux/arm/v6,linux/arm/v7,linux/arm64,linux/mips64le,linux/ppc64le,linux/riscv64,linux/s390x
-      BUILDX_PLATFORMS: linux/amd64
+      BUILDX_PLATFORMS: linux/amd64,linux/arm64
     steps:
       - checkout
       - run:
