--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,16 +30,16 @@ jobs:
       - run:
           name: Docker configure
           command: |
-            sudo aws ecr get-login-password | docker login --username AWS --password-stdin 933870538447.dkr.ecr.eu-central-1.amazonaws.com/pets
-            sudo aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/x0n9a3d4/base-images
+            sudo aws ecr get-login-password | docker login --username AWS --password-stdin 933870538447.dkr.ecr.eu-central-1.amazonaws.com
+            sudo aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/x0n9a3d4
       - run:
           name: Pull previous images
           command: |
-            sudo docker pull alpine-basic:latest
-            sudo docker pull alpine-jre8:latest
-            sudo docker pull alpine-jre11:latest
-            sudo docker pull alpine-jre16:latest
-            sudo docker pull alpine-nginx:latest
+            sudo docker pull public.ecr.aws/x0n9a3d4/alpine-basic:latest
+            sudo docker pull public.ecr.aws/x0n9a3d4/alpine-jre8:latest
+            sudo docker pull public.ecr.aws/x0n9a3d4/alpine-jre11:latest
+            sudo docker pull public.ecr.aws/x0n9a3d4/alpine-jre16:latest
+            sudo docker pull public.ecr.aws/x0n9a3d4/alpine-nginx:latest
       - run:
           name: Install docker buildx plugin
           command: |
