--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,6 @@ jobs:
     environment:
       #linux/amd64,linux/386,linux/arm/v5,linux/arm/v6,linux/arm/v7,linux/arm64,linux/mips64le,linux/ppc64le,linux/riscv64,linux/s390x
       BUILDX_PLATFORMS: linux/amd64,linux/arm64
-      BUILDX_PLATFORMS_PULL: --platform linux/amd64 --platform linux/arm64
     steps:
       - checkout
       - run:
@@ -34,14 +33,6 @@ jobs:
             sudo aws ecr get-login-password | docker login --username AWS --password-stdin 933870538447.dkr.ecr.eu-central-1.amazonaws.com
             sudo aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/x0n9a3d4
       - run:
-          name: Pull previous images
-          command: |
-            sudo docker pull public.ecr.aws/x0n9a3d4/alpine-basic:latest $BUILDX_PLATFORMS_PULL
-            sudo docker pull public.ecr.aws/x0n9a3d4/alpine-jre8:latest $BUILDX_PLATFORMS_PULL
-            sudo docker pull public.ecr.aws/x0n9a3d4/alpine-jre11:latest $BUILDX_PLATFORMS_PULL
-            sudo docker pull public.ecr.aws/x0n9a3d4/alpine-jre16:latest $BUILDX_PLATFORMS_PULL
-            sudo docker pull public.ecr.aws/x0n9a3d4/alpine-nginx:latest $BUILDX_PLATFORMS_PULL
-      - run:
           name: Install docker buildx plugin
           command: |
             curl -LJO https://github.com/docker/buildx/releases/download/v0.5.1/buildx-v0.5.1.linux-amd64
@@ -60,6 +51,7 @@ jobs:
           command: |
             docker buildx build \
             --platform $BUILDX_PLATFORMS \
+            --cache-from=public.ecr.aws/x0n9a3d4/alpine-basic:latest \
             -t public.ecr.aws/x0n9a3d4/alpine-basic:$CIRCLE_BUILD_NUM \
             -t public.ecr.aws/x0n9a3d4/alpine-basic:latest \
             ~/project/alpine-basic/ --push
@@ -68,6 +60,7 @@ jobs:
           command: |
             docker buildx build \
             --platform $BUILDX_PLATFORMS --no-cache \
+            --cache-from=public.ecr.aws/x0n9a3d4/alpine-jre8:latest \
             -t public.ecr.aws/x0n9a3d4/alpine-jre8:$CIRCLE_BUILD_NUM \
             -t public.ecr.aws/x0n9a3d4/alpine-jre8:latest \
             ~/project/alpine-jre8/ --push
@@ -76,6 +69,7 @@ jobs:
           command: |
             docker buildx build \
             --platform $BUILDX_PLATFORMS --no-cache \
+            --cache-from=public.ecr.aws/x0n9a3d4/alpine-jre11:latest \
             -t public.ecr.aws/x0n9a3d4/alpine-jre11:$CIRCLE_BUILD_NUM \
             -t public.ecr.aws/x0n9a3d4/alpine-jre11:latest \
             ~/project/alpine-jre11/ --push
@@ -84,6 +78,7 @@ jobs:
           command: |
             docker buildx build \
             --platform $BUILDX_PLATFORMS --no-cache \
+            --cache-from=public.ecr.aws/x0n9a3d4/alpine-jre16:latest \
             -t public.ecr.aws/x0n9a3d4/alpine-jre16:$CIRCLE_BUILD_NUM \
             -t public.ecr.aws/x0n9a3d4/alpine-jre16:latest \
             ~/project/alpine-jre16/ --push
@@ -91,6 +86,7 @@ jobs:
           name: Build alpine-nginx
           command: |
             docker build --no-cache \
+            --cache-from=public.ecr.aws/x0n9a3d4/alpine-nginx:latest \
             -t public.ecr.aws/x0n9a3d4/alpine-nginx:$CIRCLE_BUILD_NUM \
             -t public.ecr.aws/x0n9a3d4/alpine-nginx:latest \
             ~/project/alpine-nginx/ --push
